--- a/pages/about.html
+++ b/pages/about.html
@@ -5,10 +5,10 @@ titlename: 关于
 ---
 <h3>关于博客</h3>
 <!--  <p style=font-size:18px><B>这里</B>是我尝试着用github、jekyll、markdown搭建起来的博客。 -->
-<p style=font-size:18px>  生活中总要做一些没有什么用处的事情才有意思吧。</p>
+<p style=font-size:18px> </p>
 
 <h3>关于作者</h3>
-<p style=font-size:18px> 这些文字就是我啊 </p>
+<p style=font-size:18px>摩西在旷野怎样举蛇，人子也必照样被举起来，叫一切信他的都得永生。</p>
 
 <!--  <center><img src="/public/img/me/me.JPG" style="width:70%"></center> -->
 
