--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@ titlename: 关于
 ---
 <h3>关于博客</h3>
 <!--  <p style=font-size:18px><B>这里</B>是我尝试着用github、jekyll、markdown搭建起来的博客。 -->
-<p style=font-size:18px> </p>
+<p style=font-size:18px>记录一点读书，技术，感悟...我的自留地</p>
 
 <h3>关于作者</h3>
 <p style=font-size:18px>摩西在旷野怎样举蛇，人子也必照样被举起来，叫一切信他的都得永生。</p>
