--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ titlename: 关于
 <p style=font-size:18px>记录一点读书，技术，感悟...我的自留地</p>
 
 <h3>关于作者</h3>
-<p style=font-size:18px>摩西在旷野怎样举蛇，人子也必照样被举起来，叫一切信他的都得永生。</p>
+<p style=font-size:18px>世人哪！耶和华已指示你何为善。他向你所要的是什么呢？只要你行公义，好怜悯，存谦卑的心，与你的神同行。</p>
 
 <!--  <center><img src="/public/img/me/me.JPG" style="width:70%"></center> -->
 
