--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@ titlename: 关于
 <p style=font-size:18px>世人哪！耶和华已指示你何为善。他向你所要的是什么呢？只要你行公义，好怜悯，存谦卑的心，与你的神同行。</p>
 
 <!--  <center><img src="/public/img/me/me.JPG" style="width:70%"></center> -->
-
+这里找到我: <a href="https://www.zhihu.com/people/an-xing-le-20">知乎</a> <a href="https://github.com/anxingle">github</a>
 <hr>
 <a href="{{ site.author.linkedin }}">
   <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
